[gd_scene load_steps=10 format=3 uid="uid://cu6up2gensqg3"]

[ext_resource type="Texture2D" uid="uid://crnqolf7tifo6" path="res://sprites/tooth.png" id="1_nshbo"]
[ext_resource type="Script" path="res://scripts/toothman.gd" id="1_rl4wy"]

[sub_resource type="ViewportTexture" id="ViewportTexture_jscls"]
viewport_path = NodePath("SubViewport")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gfa2q"]
radius = 0.25
height = 1.2

[sub_resource type="AtlasTexture" id="AtlasTexture_14qpv"]
atlas = ExtResource("1_nshbo")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7xe5"]
atlas = ExtResource("1_nshbo")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd0wl"]
atlas = ExtResource("1_nshbo")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xou7j"]
atlas = ExtResource("1_nshbo")
region = Rect2(192, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_nvfr8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14qpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7xe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd0wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xou7j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ToothMan" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.5, 2.08165e-12)
lock_rotation = true
script = ExtResource("1_rl4wy")

[node name="DialogProjection" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.798625, 0)
visible = false
billboard = 2
texture = SubResource("ViewportTexture_jscls")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_gfa2q")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.02, 2.08165e-12)
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_nvfr8")
autoplay = "default"
frame_progress = 0.589623

[node name="DialogTimer" type="Timer" parent="."]
one_shot = true

[node name="WalkingTimer" type="Timer" parent="."]
autostart = true

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(64, 32)

[node name="DialogText" type="Label" parent="SubViewport"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_right = 23.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Ouch!"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="DialogTimer" to="." method="_on_dialog_timer_timeout"]
[connection signal="timeout" from="WalkingTimer" to="." method="_on_walking_timer_timeout"]
